Disabling buttons on click done

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -59,7 +59,6 @@
   document.querySelectorAll('button').forEach(button => {
     button.addEventListener('click', function() {
       console.log('rightAnswerDef: ', rightAnswerDef)
-
       if (this.textContent === rightAnswerDef) {
         // alert('¡Correct!');
         button.classList.remove("bg-gray-200")
@@ -71,6 +70,8 @@
         button.classList.add("wrong")
         // alert('Incorrect. The right answer is: ' + rightAnswerDef);
       }
+       // Disable all buttons after any button is clicked
+    document.querySelectorAll('button').forEach(btn => btn.disabled = true);
     });
   });
   </script>
