--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,11 +8,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Karla&family=Outfit:wght@100..900&family=Oxanium:wght@200..800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="home.css">
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body class="bg-black flex items-center justify-center h-screen"style="font-family: 'Oxanium', sans-serif">
-  <div class="bg-lime-500 p-6 rounded-lg shadow-lg text-center">
-    <h1 class="text-2xl font-bold mb-4">DAILY PROGRAMMING QUESTION</h1>
+  <div class="bg-customGreen p-6 rounded-lg shadow-lg text-center">
+    <h1 class="text-2xl font-bold mb-4" style="font-family: 'Press Start 2P', sans-serif">DAILY PROGRAMMING QUESTION</h1>
 
     <!-- Mostrar la pregunta -->
     <p class="text-xl text-gray-700 mb-4 italic text-white"><strong><%= question.question %></strong></p>
@@ -62,18 +62,27 @@
       if (this.textContent === rightAnswerDef) {
         // alert('¡Correct!');
         button.classList.remove("bg-gray-200")
-        button.classList.add("bg-lime-700");
-        button.classList.add("right");
+        button.classList.add("bg-customGreen");
       } else {
         button.classList.remove("bg-gray-200")
         button.classList.add("bg-red-500")
-        button.classList.add("wrong")
         // alert('Incorrect. The right answer is: ' + rightAnswerDef);
       }
        // Disable all buttons after any button is clicked
     document.querySelectorAll('button').forEach(btn => btn.disabled = true);
     });
   });
+
+  tailwind.config = {
+    theme: {
+      extend: {
+        colors: {
+          customGreen: '#41fd5b',
+        },
+      },
+    },
+  };
+
   </script>
 </body>
 </html>
