--- a/views/home.ejs
+++ b/views/home.ejs
@@ -62,7 +62,7 @@
       if (this.textContent === rightAnswerDef) {
         // alert('¡Correct!');
         button.classList.remove("bg-gray-200")
-        button.classList.add("bg-customGreen");
+        button.classList.add("bg-darkGreen");
       } else {
         button.classList.remove("bg-gray-200")
         button.classList.add("bg-red-500")
@@ -78,6 +78,7 @@
       extend: {
         colors: {
           customGreen: '#41fd5b',
+          darkGreen: '#35cb49'
         },
       },
     },
