validación lado cliente pt 1

--- a/views/new-question.ejs
+++ b/views/new-question.ejs
@@ -18,14 +18,14 @@
         
         <!-- Mostrar la pregunta -->
         <label for="question" class="text-left">Write your question here:</label>       
-        <textarea name="question" id="question" class="bg-gray-200 text-gray-800 p-2 rounded"></textarea>
+        <textarea name="question" id="question" class="bg-gray-200 text-gray-800 p-2 rounded" required></textarea>
 
         <!-- Mostrar las opciones de respuesta -->
         <label for="answer" class="text-left">Write your answers:</label>
-        <input type="text" name="answer" id="answer" class="bg-gray-200 text-gray-800 p-2 rounded">
-        <input type="text" name="answer" id="answer" class="bg-gray-200 text-gray-800 p-2 rounded">
-        <input type="text" name="answer" id="answer" class="bg-gray-200 text-gray-800 p-2 rounded">
-        <input type="text" name="answer" id="answer" class="bg-gray-200 text-gray-800 p-2 rounded">
+        <input type="text" name="answer" id="answer" class="bg-gray-200 text-gray-800 p-2 rounded" required>
+        <input type="text" name="answer" id="answer" class="bg-gray-200 text-gray-800 p-2 rounded" required>
+        <input type="text" name="answer" id="answer" class="bg-gray-200 text-gray-800 p-2 rounded" required>
+        <input type="text" name="answer" id="answer" class="bg-gray-200 text-gray-800 p-2 rounded" required>
 
         <input type="submit" value="Send" class="bg-gray-200 text-gray-800 p-2 rounded">
     </div>
