--- a/views/new-question.ejs
+++ b/views/new-question.ejs
@@ -21,14 +21,33 @@
         <textarea name="question" id="question" class="bg-gray-200 text-gray-800 p-2 rounded" required></textarea>
 
         <!-- Mostrar las opciones de respuesta -->
-        <label for="answer" class="text-left">Write your answers:</label>
-        <input type="text" name="answer" id="answer" class="bg-gray-200 text-gray-800 p-2 rounded" required>
-        <input type="text" name="answer" id="answer" class="bg-gray-200 text-gray-800 p-2 rounded" required>
-        <input type="text" name="answer" id="answer" class="bg-gray-200 text-gray-800 p-2 rounded" required>
-        <input type="text" name="answer" id="answer" class="bg-gray-200 text-gray-800 p-2 rounded" required>
+        <p class="text-left">Write your answers (please, mark the correct ones):</p>
+        <div class="flex gap-4 justify-between">
+        <label for="answer1" hidden></label>
+        <input type="checkbox" name="answer1CheckBox" value="true">
+        <input type="text" name="answer1Text" class="bg-gray-200 text-gray-800 p-2 rounded w-full" required>
+        </div>
 
-        <input type="submit" value="Send" class="bg-gray-200 text-gray-800 p-2 rounded">
+        <div class="flex gap-4 justify-between">
+        <label for="answer2" hidden></label>
+        <input type="checkbox" name="answer2CheckBox" value="true">
+        <input type="text" name="answer2Text" class="bg-gray-200 text-gray-800 p-2 rounded w-full" required>
+        </div>
+
+        <div class="flex gap-4 justify-between">
+        <label for="answer3" hidden></label>
+        <input type="checkbox" name="answer3CheckBox" value="true">
+        <input type="text" name="answer3Text" class="bg-gray-200 text-gray-800 p-2 rounded w-full" required>
+        </div>
+
+        <div class="flex gap-4 justify-between">
+        <label for="answer4" hidden></label>
+        <input type="checkbox" name="answer4CheckBox" value="true">
+        <input type="text" name="answer4Text" class="bg-gray-200 text-gray-800 p-2 rounded w-full" required>
+        </div>
+
     </div>
+        <input type="submit" value="SEND" class="bg-black text-white p-2 px-8 mt-4 rounded" style="font-family: 'Press Start 2P', sans-serif">
   </form>
 </body>
 <script>
