--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,12 +18,14 @@
     <p class="text-xl text-gray-700 mb-4 italic text-white"><strong><%= question.question %></strong></p>
 
     <!-- Mostrar las opciones de respuesta -->
-    <div class="flex flex-col space-y-4">
+    <div class="flex flex-col space-y-4 ">
       <% question.answerOptions.forEach(option => { %>
         <button class="bg-gray-200 text-gray-800 p-2 rounded"><%= option.answer %></button>
       <% }); %>
     </div>
-    <div id="explanation">
+    <div class="mt-4 text-start">
+      <p id="explanationtitle" class="inline bg-gray-200 mt-4 rounded"></p>
+      <p id="explanation"></p>
     </div>
   </div>
 
@@ -56,7 +58,7 @@
       }
     }
     const rightAnswerDef = rightAnswer(answerA, answerB, answerC, answerD, answerAIsCorrect, answerBIsCorrect, answerCIsCorrect, answerDIsCorrect)
-    console.log('rightAnswer: ', rightAnswerDef)
+    // console.log('rightAnswer: ', rightAnswerDef)
 
   
   document.querySelectorAll('button').forEach(button => {
@@ -72,8 +74,12 @@
         // alert('Incorrect. The right answer is: ' + rightAnswerDef);
       }
       // Show explanation 
+      const explanationtitle = document.getElementById('explanationtitle');
       const explanationEl = document.getElementById("explanation");
+      explanationtitle.textContent="Explanation:";
       explanationEl.textContent = explanation;
+
+  
 
        // Disable all buttons after any button is clicked
     document.querySelectorAll('button').forEach(btn => btn.disabled = true);
