--- a/views/new-question.ejs
+++ b/views/new-question.ejs
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Karla&family=Outfit:wght@100..900&family=Oxanium:wght@200..800&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-  <!-- <link rel="stylesheet" href="/modal.css"> -->
+  <link rel="stylesheet" href="/modal.css">
 </head>
 <body class="bg-black flex items-center justify-center h-screen"style="font-family: 'Oxanium', sans-serif">
   <form id="newQuestionForm" class="bg-customGreen p-6 rounded-lg shadow-lg text-center" action="/submit-new-question" method="POST">
@@ -22,7 +22,7 @@
         <textarea name="question" id="question" class="bg-gray-200 text-gray-800 p-2 rounded" required maxlength="4000"></textarea>
 
         <!-- Mostrar las opciones de respuesta -->
-        <p class="text-left">Write your answers (please, mark the correct one/s):</p>
+        <p class="text-left">Write your answers here (please, mark the correct one/s):</p>
         
         <div class="flex gap-4 justify-between">
         <label for="answer1" hidden></label>
@@ -52,13 +52,15 @@
         <input type="submit" value="SEND" class="bg-black text-white p-2 px-8 mt-4 rounded" style="font-family: 'Press Start 2P', sans-serif">
   </form>
 
-  <!-- Cuadro de diálogo -->
-  <!-- <div id="modal" class="modal">
+  <!--Cuadro de diálogo -->
+  <% if (message) { %>
+  <div id="modal" class="modal">
     <div class="modal-content">
-      <p>Gracias por tu aportación. bla bla bla. Revisaremos la aportación y la aprobaremos en el menor tiempo posible.</p>
+      <p><%= message %></p>
       <button id="closeModal">Cerrar</button>
     </div>
-  </div> -->
+  </div>
+<% } %>
 
 </body>
 <script>
@@ -73,80 +75,24 @@
     },
   };
 
-  // document.addEventListener("DOMContentLoaded", () => {
-  //     const form = document.getElementById("newQuestionForm");
-  //     const modal = document.getElementById("modal");
-  //     const closeModal = document.getElementById("closeModal");
+  
+      const form = document.getElementById("newQuestionForm");
+      const modal = document.getElementById("modal");
+      const closeModal = document.getElementById("closeModal");
+  
+      // Cerrar el modal
+      closeModal.addEventListener("click", function () {
+        modal.style.display = "none";
+        form.reset(); // Limpiar el formulario para agregar otra pregunta
+      });
 
-  //     // Manejar el envío del formulario
-  //     form.addEventListener("submit", async (event) => {
-  //       event.preventDefault();
-
-  //       // Capturar datos del formulario
-  //       const question = document.getElementById("question").value;
-  //       const answerOptions = [
-  //         {
-  //           answer: document.getElementById("answer1Text").value,
-  //           isCorrect: document.getElementById("answer1CheckBox").checked,
-  //         },
-  //         {
-  //           answer: document.getElementById("answer2Text").value,
-  //           isCorrect: document.getElementById("answer2CheckBox").checked,
-  //         },
-  //         {
-  //           answer: document.getElementById("answer3Text").value,
-  //           isCorrect: document.getElementById("answer3CheckBox").checked,
-  //         },
-  //         {
-  //           answer: document.getElementById("answer4Text").value,
-  //           isCorrect: document.getElementById("answer4CheckBox").checked,
-  //         }
-  //       ];
-        
-  //       // Validación en el cliente
-  //       if (answerOptions.every(option => !option.isCorrect)) {
-  //         alert('At least one answer must be marked as the correct one.');
-  //         return;
-  //       }
-
-  //       // Enviar datos al servidor
-  //       try {
-  //         const response = await fetch('/submit-new-question', {
-  //           method: 'POST',
-  //           headers: { 'Content-Type': 'application/json' },
-  //           body: JSON.stringify({ question, answerOptions }),
-  //         });
-  //         console.log(response);
-          
-  //         const result = await response.json();
-  //         if (response.ok) {
-  //           // Mostrar el modal si la pregunta se guardó correctamente
-  //           modal.style.display = "block";
-  //         } else {
-  //           alert(result.error || 'Error al enviar la pregunta.');
-  //         }
-  //       } catch (error) {
-  //         console.error('Error:', error);
-  //         alert('Hubo un error al enviar la pregunta.');
-  //       }
-  //     });
-
-  //     // Cerrar el modal
-  //     closeModal.addEventListener("click", function () {
-  //       modal.style.display = "none";
-  //       form.reset(); // Limpiar el formulario para agregar otra pregunta
-  //     });
-
-  //     // Cerrar el modal haciendo clic fuera del cuadro de diálogo
-  //     window.addEventListener("click", function (event) {
-  //       if (event.target == modal) {
-  //         modal.style.display = "none";
-  //         form.reset();
-  //       }
-  //     });
-  //   });
-
-
+      // Cerrar el modal haciendo clic fuera del cuadro de diálogo
+      window.addEventListener("click", function (event) {
+        if (event.target == modal) {
+          modal.style.display = "none";
+          form.reset();
+        }
+      });
 
 </script>
 </html>
