--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,25 +4,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pregunta del Día</title>
+  <!-- Tailwind CSS for styling -->
   <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Fonts preloading and custom font links -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Karla&family=Outfit:wght@100..900&family=Oxanium:wght@200..800&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body class="bg-black flex items-center justify-center h-screen"style="font-family: 'Oxanium', sans-serif">
+  <!-- Main container with Tailwind styles for layout and custom border and background colors -->
   <div class="border-4 border-primaryGreen bg-backgroundGreen p-6 rounded-lg shadow-lg text-center">
     <h1 class="text-2xl font-bold mb-4 text-white" style="font-family: 'Press Start 2P', sans-serif">DAILY PROGRAMMING QUESTION</h1>
 
-    <!-- Mostrar la pregunta -->
+    <!-- Displaying the question text from the first question in the questions array -->
     <p class="text-xl mb-4 italic text-primaryGreen"><strong><%= questionsWithShuffledAnswers[0].question %></strong></p>
 
-    <!-- Mostrar las opciones de respuesta -->
+    <!-- Answer options displayed as buttons -->
     <div class="flex flex-col space-y-4 ">
       <% questionsWithShuffledAnswers[0].answerOptions.forEach(option => { %>
-        <button class="bg-secondaryGreen text-primaryGreen border-2 border-primaryGreen p-2 rounded"><%= option.answer %></button>
+        <!-- Each button represents an answer option with data-istrue attribute indicating correctness -->
+        <button class="bg-secondaryGreen text-primaryGreen border-2 border-primaryGreen p-2 rounded" data-istrue="<%= option.isCorrect %>"><%= option.answer %></button>
       <% }); %>
     </div>
+
+    <!-- Explanation section hidden initially -->
     <div class="mt-4 text-start bg-gray-200 rounded-sm px-1">
       <p id="explanationtitle" class="inline mt-4 rounded"></p>
       <p id="explanation"></p>
@@ -30,7 +36,7 @@
   </div>
 
   <script>
-    
+    // Define variables for answer options and correctness to use in the frontend script
     const answerA = '<%= questionsWithShuffledAnswers[0].answerOptions[0].answer %>';
     const answerAIsCorrect = '<%= questionsWithShuffledAnswers[0].answerOptions[0].isCorrect %>';
     const answerB = '<%= questionsWithShuffledAnswers[0].answerOptions[1].answer %>';
@@ -40,8 +46,10 @@
     const answerD = '<%= questionsWithShuffledAnswers[0].answerOptions[3].answer %>';
     const answerDIsCorrect = '<%= questionsWithShuffledAnswers[0].answerOptions[3].isCorrect %>';
 
+    //Explanation text
     const explanation = '<%= questionsWithShuffledAnswers[0].explanation %>'
 
+    // Function to find the correct answer by checking which answer option is marked as true
     const rightAnswer = (answer1, answer2, answer3, answer4, answer1bool, answer2bool, answer3bool, answer4bool) => {
       if (answer1bool == "true") {
         console.log("answer1: ", answer1)
@@ -57,28 +65,29 @@
         return answer4;
       }
     }
+
+    // Calculate the correct answer definition using the rightAnswer function
     const rightAnswerDef = rightAnswer(answerA, answerB, answerC, answerD, answerAIsCorrect, answerBIsCorrect, answerCIsCorrect, answerDIsCorrect)
-    // console.log('rightAnswer: ', rightAnswerDef)
 
   
   document.querySelectorAll('button').forEach(button => {
     button.addEventListener('click', function() {
       console.log('rightAnswerDef: ', rightAnswerDef)
       console.log('this.textContent', this.textContent)
-      if (this.textContent === rightAnswerDef) {
-        // alert('¡Correct!');
-        // button.classList.remove("bg-secondaryGreen text-primaryGreen")
+      console.log('this.dataset.istrue', this.dataset.istrue)
+      //Check if the clicked answer is correct using data-istrue attribute
+      if (this.dataset.istrue === "true") {
+        //Add styles to show the button as correct
         button.classList.add("bg-primaryGreen"); 
         button.classList.add("border-secondaryGreen"); 
         button.classList.add("text-secondaryGreen");
       } else {
-        // button.classList.remove("bg-gray-200")
+        //add styles to show the button as incorrect
         button.classList.add("bg-errorRed"); 
         button.classList.add("border-secondaryErrorRed");  
         button.classList.add("text-white"); 
-        // alert('Incorrect. The right answer is: ' + rightAnswerDef);
       }
-      // Show explanation 
+      // Display explanation if available
        if (explanation) {
       const explanationtitle = document.getElementById('explanationtitle');
       const explanationEl = document.getElementById("explanation");
@@ -86,7 +95,7 @@
       explanationEl.textContent = explanation;
     }
 
-       // Disable all buttons after any button is clicked
+       // Disable all buttons after any button is clicked to prevent further answers
     document.querySelectorAll('button').forEach(btn => btn.disabled = true);
     });
   });
