--- a/views/template-form.ejs
+++ b/views/template-form.ejs
@@ -21,7 +21,7 @@
         </label>
         <label>
             <input type="radio" name="templateType" value="booklet">
-            Booklet Template
+            Blooket Template
         </label>
         <label class="form-step">Step 3. Generate your quiz</label>
         <input class="input-btn" type="submit" value="Download!">
