solved explanation in ejs view changing textContent to innerHTML

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -92,7 +92,7 @@
       const explanationtitle = document.getElementById('explanationtitle');
       const explanationEl = document.getElementById("explanation");
       explanationtitle.textContent="Explanation:";
-      explanationEl.textContent = explanation;
+      explanationEl.innerHTML = explanation;
     }
 
        // Disable all buttons after any button is clicked to prevent further answers
