--- a/views/new-question.ejs
+++ b/views/new-question.ejs
@@ -64,7 +64,7 @@
 
 </body>
 <script>
-    tailwind.config = {
+tailwind.config = {
     theme: {
       extend: {
         colors: {
@@ -76,23 +76,50 @@
   };
 
   
-      const form = document.getElementById("newQuestionForm");
-      const modal = document.getElementById("modal");
-      const closeModal = document.getElementById("closeModal");
+  const form = document.getElementById("newQuestionForm");
+  const modal = document.getElementById("modal");
+  const closeModal = document.getElementById("closeModal");
   
-      // Cerrar el modal
-      closeModal.addEventListener("click", function () {
-        modal.style.display = "none";
-        form.reset(); // Limpiar el formulario para agregar otra pregunta
-      });
+  // Cerrar el modal
+  closeModal.addEventListener("click", function () {
+    modal.style.display = "none";
+    form.reset(); // Limpiar el formulario para agregar otra pregunta
+  });
 
-      // Cerrar el modal haciendo clic fuera del cuadro de diálogo
-      window.addEventListener("click", function (event) {
-        if (event.target == modal) {
-          modal.style.display = "none";
-          form.reset();
-        }
-      });
+  // Cerrar el modal haciendo clic fuera del cuadro de diálogo
+  window.addEventListener("click", function (event) {
+    if (event.target == modal) {
+      modal.style.display = "none";
+      form.reset();
+    }
+  });
+
+  // // Capturar datos del formulario
+  // const question = document.getElementById("question").value;
+  // const answerOptions = [
+  //   {
+  //     answer: document.getElementById("answer1Text").value,
+  //     isCorrect: document.getElementById("answer1CheckBox").checked,
+  //   },
+  //   {
+  //     answer: document.getElementById("answer2Text").value,
+  //     isCorrect: document.getElementById("answer2CheckBox").checked,
+  //   },
+  //   {
+  //     answer: document.getElementById("answer3Text").value,
+  //     isCorrect: document.getElementById("answer3CheckBox").checked,
+  //   },
+  //   {
+  //     answer: document.getElementById("answer4Text").value,
+  //     isCorrect: document.getElementById("answer4CheckBox").checked,
+  //   }
+  // ];
+        
+  // // Validación en el cliente
+  // if (answerOptions.every(option => !option.isCorrect)) {
+  //   alert('At least one answer must be marked as the correct one.');
+  //   return;
+  // }
 
 </script>
 </html>
